--- a/public_html/perseo/main/css/dcmtheme.css
+++ b/public_html/perseo/main/css/dcmtheme.css
@@ -7942,7 +7942,7 @@ span.date {
     height: 18px;
     width: 10px;
     background-color: rgba(0,0,0,.3);
-    border-radius: 9px;
+    /*border-radius: 9px;*/
 }
 
     ::-webkit-scrollbar:hover {
@@ -7960,11 +7960,11 @@ span.date {
 
 
 ::-webkit-scrollbar-track {
-    border-radius: 9px;
+    /*border-radius: 9px;*/
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 9px;
+    /*border-radius: 9px;*/
     background-color: rgba(0,0,0,.4);
 }
 
@@ -8547,7 +8547,7 @@ html > body .featured a.isobrick {
     .og-grid > li {
         display: inline-block;
         /*margin: 10px 5px 0 5px;*/
-        margin: 10px 10px 40px 10px;
+        margin: 10px 10px 14.5px 10px;
         vertical-align: top;
         -webkit-transition-property: top, left, opacity;
         -moz-transition-property: top, left, opacity;
